syntax = "proto3";
package localauth;
option go_package = "/localauth";
service LocalAuth {
  rpc Ping(Empty) returns (PingResponse){};
  rpc GetAccessToken(Empty) returns (ATResponse){};
  rpc Callback(CBRequest) returns (Empty){};
}

message Empty {}
message ATResponse { string accessToken = 1; }
message CBRequest { string url = 1; }
message PingResponse { string message = 1; }
